syntax = "proto3";

option csharp_namespace = "gRPC.Net.BookingModule";

package greet;

service Bookings {
  rpc GetBookings (BookingRequest) returns (stream BookingReply);
}

message BookingRequest {
  int32 customerId = 1;
}

message BookingReply {
  int32 productId = 1;
  int32 bookingCount = 2;
}
